# keel

./: .copilot-instructions.md  .gitignore  ARCHITECTURE.md  CLAUDE.md  COMPLETION_SUMMARY.md  FINAL_CHECKLIST.md  GEMINI.md  IMPLEMENTATION_ROADMAP.md  PHASE1_ARCHITECTURE.md  PHASE1_COMPLETE.md  PHASE1_QUICKSTART.md  PHASE1_READY.md  README.md  README_ENHANCEMENTS.md  adr.py  analyzer.py  cli.py  config.py  context.py  cost.py  debt.py  decide  digest.py  github.py  inject.py  install.py  llm.py  meeting.py  mood.py  platform_utils.py  poller.py  processor.py  profile.py  projects.py  proxy.py  pyproject.toml  quality.py  queue_writer.py  regret.py  requirements.txt  (+24 more)
.gemini/: todo.md  todo_phase2.md
.gemini/visual-companion/: state.json
.github/: copilot-instructions.md
adapters/: github.py  slack.py  teams.py
docs/superpowers/plans/: 2026-04-05-keel-phase-2.md  2026-04-05-keel-shadow-poller-intelligence.md
docs/superpowers/specs/: 2026-04-05-keel-shadow-poller-design.md
templates/: base.html  config.html  cost.html  decision_detail.html  decision_edit.html  decisions.html  github.html  index.html  intelligence.html  poller.html  process.html  profile.html  projects.html  quality.html  regret.html  suggested.html  team.html
